--- a/web/pages/docs/index.mdx
+++ b/web/pages/docs/index.mdx
@@ -6,10 +6,10 @@ import DocsLayout from "../../layouts/docs";
 
 ## Install
 
-Replicate is a Python package. Run this to install it:
+Keepsake is a Python package. Run this to install it:
 
 ```
-pip install -U replicate
+pip install -U keepsake
 ```
 
 That's it! This has installed both the [Python library](/docs/reference/python) and the [command-line interface](/docs/reference/cli).
@@ -20,6 +20,6 @@ If you prefer **training scripts and the CLI**, [follow our 10 minute tutorial t
 
 If you prefer **working in notebooks**, <a href={process.env.TUTORIAL_COLAB_URL} target="_blank">follow our notebook tutorial on Colab</a>.
 
-If you like to **learn concepts first**, [read our guide about how Replicate works](/docs/learn/how-it-works).
+If you like to **learn concepts first**, [read our guide about how Keepsake works](/docs/learn/how-it-works).
 
 </DocsLayout>
