--- a/web/pages/docs/reference/python.mdx
+++ b/web/pages/docs/reference/python.mdx
@@ -4,7 +4,7 @@ import Note from "../../../components/note";
 <DocsLayout title="Python library reference">
 
 
-The Replicate Python library is used to create experiments and checkpoints in your training script. It also has functions for programmatically analyzing the experiments.
+The Keepsake Python library is used to create experiments and checkpoints in your training script. It also has functions for programmatically analyzing the experiments.
 
 These two modes are comprehensively described below in the [Experiment tracking](#experiment-tracking) and [Analyze and plot experiments](#analyze-and-plot-experiments) sections. For an introduction of how to use the Python API, see [the tutorial](/docs/tutorial).
 
@@ -12,9 +12,9 @@ To install the library, [see the installation instructions](/docs).
 
 ## Experiment tracking
 
-These functions implement the core functionality of Replicate, i.e. saving parameters, metrics, and code to the repository. You use these functions during model training.
+These functions implement the core functionality of Keepsake, i.e. saving parameters, metrics, and code to the repository. You use these functions during model training.
 
-### `replicate.init()`
+### `keepsake.init()`
 
 Create and return an experiment.
 
@@ -23,17 +23,17 @@ It takes these arguments:
 - `path`: A path to a file or directory that will be uploaded to the repository, relative to the project directory. This can be used to save your training code, or anything you want. If `path` is not set, no data will be saved.
 - `params`: A dictionary of hyperparameters to record along with the experiment.
 
-The path saved is relative to the project directory. The project directory is determined by the directory that contains `replicate.yaml`. If no `replicate.yaml` is found in any parent directories, the current working directory will be used.
+The path saved is relative to the project directory. The project directory is determined by the directory that contains `keepsake.yaml`. If no `keepsake.yaml` is found in any parent directories, the current working directory will be used.
 
-If you want to exclude some files from being included, you can create a `.replicateignore` file alongside `replicate.yaml`. It is in the same format as `.gitignore`.
+If you want to exclude some files from being included, you can create a `.keepsakeignore` file alongside `keepsake.yaml`. It is in the same format as `.gitignore`.
 
-The repository location for this data is determined by the `repository` option in `replicate.yaml`. [Learn more in the reference documentation.](/docs/reference/yaml#repository)
+The repository location for this data is determined by the `repository` option in `keepsake.yaml`. [Learn more in the reference documentation.](/docs/reference/yaml#repository)
 
 For example:
 
 ```python
->>> import replicate
->>> experiment = replicate.init(
+>>> import keepsake
+>>> experiment = keepsake.init(
 ...   path=".",
 ...   params={"learning_rate" 0.01},
 ... )
@@ -48,9 +48,9 @@ It takes these arguments:
 - `path`: A path to a file or directory that will be uploaded to the repository, relative to the project directory. This can be used to save weights, Tensorboard logs, and other artifacts produced during the training process. If `path` is not set, no data will be saved.
 - `metrics`: A dictionary of metrics to record along with the checkpoint.
 - `primary_metric` _(optional)_: A tuple `(name, goal)` to define one of the metrics as a primary metric to optimize. Goal can either be `minimize` or `maximize`.
-- `step` _(optional)_: the iteration number of this checkpoint, such as epoch number. This is displayed in `replicate ls` and various other places.
+- `step` _(optional)_: the iteration number of this checkpoint, such as epoch number. This is displayed in `keepsake ls` and various other places.
 
-Like `replicate.init()`, the path saved is relative to the project directory. The project directory is determined by the directory that contains `replicate.yaml`. If no `replicate.yaml` is found in any parent directories, the current working directory will be used.
+Like `keepsake.init()`, the path saved is relative to the project directory. The project directory is determined by the directory that contains `keepsake.yaml`. If no `keepsake.yaml` is found in any parent directories, the current working directory will be used.
 
 Any keyword arguments passed to the function will also be recorded.
 
@@ -83,25 +83,25 @@ The Python API also contains a set of functions to analyze and plot the results 
 
 For interactive examples of how to use these functions, <a href="https://colab.research.google.com/drive/14zX3uYaZzHu0Sn7ylQTW1NalM363fcCf" target="_blank">see this Colab notebook</a>
 
-### `replicate.experiments.list()`
+### `keepsake.experiments.list()`
 
 List the experiments in the current project. Returns a list of [Experiment](#the-experiment-class) objects.
 
 It takes one argument:
 
-- `filter` _(optional)_: A function with the signature `def filter(exp: replicate.Experiment): bool`. If this function returns true, the experiment is included in the returned list. If not provided, all experiments are returned.
+- `filter` _(optional)_: A function with the signature `def filter(exp: keepsake.Experiment): bool`. If this function returns true, the experiment is included in the returned list. If not provided, all experiments are returned.
 
 For example:
 
 ```
->>> experiments = replicate.experiments.list(
+>>> experiments = keepsake.experiments.list(
 ...   filter=lambda exp: exp.best().step >= 100
 ... )
 ```
 
 ### `experiments.plot()`
 
-The list of experiments returned by `replicate.experiments.list()` can be plotted and compared graphically. `experiments.plot()` plots a single metric from the checkpoints of all experiments in a list of experiments.
+The list of experiments returned by `keepsake.experiments.list()` can be plotted and compared graphically. `experiments.plot()` plots a single metric from the checkpoints of all experiments in a list of experiments.
 
 It takes two arguments:
 
@@ -111,7 +111,7 @@ It takes two arguments:
 For example:
 
 ```python
->>> experiments = replicate.experiments.list()
+>>> experiments = keepsake.experiments.list()
 >>> experiments.plot(metric="loss")
 ```
 
@@ -129,7 +129,7 @@ It takes four arguments:
 For example:
 
 ```python
->>> experiments = replicate.experiments.list()
+>>> experiments = keepsake.experiments.list()
 >>> experiments.scatter(param="learning_rate", metric="loss")
 ```
 
@@ -140,13 +140,13 @@ Delete all experiments in this list of experiments.
 For example:
 
 ```python
->>> bad_experiments = replicate.experiments.list(
+>>> bad_experiments = keepsake.experiments.list(
 ...   lambda exp: exp.best().metrics["accuracy"] < 0.5
 ... )
 >>> bad_experiments.delete()
 ```
 
-### `replicate.experiments.get()`
+### `keepsake.experiments.get()`
 
 Returns a single [Experiment](#the-experiment-class) object.
 
@@ -157,7 +157,7 @@ It takes a single argument:
 For example:
 
 ```python
->>> exp = replicate.experiments.get("abcd")
+>>> exp = keepsake.experiments.get("abcd")
 ```
 
 ### The `Experiment` class
@@ -169,8 +169,8 @@ For example:
 - `duration`: The time between the creation of the experiment and the latest checkpoint
 - `user`: The username of the person who started the experiment
 - `command`: The command that the experiment was started with
-- `path`: The path which was saved to the repository by `replicate.init()`, relative to `replicate.yaml`
-- `params`: The dictionary of parameters that were defined in `replicate.init()`
+- `path`: The path which was saved to the repository by `keepsake.init()`, relative to `keepsake.yaml`
+- `params`: The dictionary of parameters that were defined in `keepsake.init()`
 - `python_packages`: The Python packages and their versions which where imported when the experiment started
 - `checkpoints`: A list of (Checkpoint)[#the-checkpoint-class] objects
 
@@ -202,7 +202,7 @@ It takes two arguments:
 For example:
 
 ```python
->>> experiment = replicate.experiments.get("ab1234")
+>>> experiment = keepsake.experiments.get("ab1234")
 >>> experiment.plot(metric="loss")
 ```
 
@@ -212,14 +212,14 @@ For example:
 
 - `id`: The checkpoint ID
 - `created`: The `datetime.datetime` of when the checkpoint was created
-- `path`: The path which was saved to the repository by `experiment.checkpoint()`, relative to `replicate.yaml`
+- `path`: The path which was saved to the repository by `experiment.checkpoint()`, relative to `keepsake.yaml`
 - `step`: The step as defined in `experiment.checkpoint()`
 - `metrics`: The dictionary of metrics that were defined in `experiment.checkpoint()`
 - `primary_metric`: The primary metric as defined in `experiment.checkpoint()`
 
 ### `checkpoint.checkout()`
 
-Similar to `replicate checkout` in the CLI, `checkpoint.checkout()` copies the files from the checkpoint and its parent experiment to a local directory.
+Similar to `keepsake checkout` in the CLI, `checkpoint.checkout()` copies the files from the checkpoint and its parent experiment to a local directory.
 
 It takes two arguments:
 
@@ -229,7 +229,7 @@ It takes two arguments:
 For example:
 
 ```python
->>> exp = replicate.experiments.get("abcd")
+>>> exp = keepsake.experiments.get("abcd")
 >>> chk = exp.best()
 >>> chk.checkout("/tmp/my-folder")
 ```
@@ -245,7 +245,7 @@ It takes a single argument:
 For example:
 
 ```python
->>> exp = replicate.experiments.get("abcd")
+>>> exp = keepsake.experiments.get("abcd")
 >>> chk = exp.best()
 >>> model_file = chk.open("model.pkl")
 >>> model = torch.load(model_file)
@@ -287,21 +287,21 @@ For example:
 
 ### The `Project` class
 
-If you want to use Replicate without creating a `replicate.yaml` configuration file, you can configure the repository location using the `Project` class.
+If you want to use Keepsake without creating a `keepsake.yaml` configuration file, you can configure the repository location using the `Project` class.
 
 For example, at the training stage:
 
 ```python
->>> project = replicate.Project(repository="s3://my-bucket", directory="/Users/andreas/my-project")
->>> experiment = project.experiments.create(path=".", params={"foo": "bar"})  # equivalent to replicate.init()
+>>> project = keepsake.Project(repository="s3://my-bucket", directory="/Users/andreas/my-project")
+>>> experiment = project.experiments.create(path=".", params={"foo": "bar"})  # equivalent to keepsake.init()
 >>> experiment.checkpoint([...])
 ```
 
 Or during analysis:
 
 ```python
->>> project = replicate.Project(repository="s3://my-bucket")
->>> experiments = project.experiments.list()  # equivalent to replicate.experiments.list()
+>>> project = keepsake.Project(repository="s3://my-bucket")
+>>> experiments = project.experiments.list()  # equivalent to keepsake.experiments.list()
 ```
 
 </DocsLayout>
